# genpoly-rpg

./: .travis.yml  CMakeLists.txt  COPYING.txt  COPYING_Qhull.txt  INSTALL.txt  README.md  README.txt  cleancmake.sh
cmake/: gitversion.cmake  gitversion.h.in
src/: CMakeLists.txt  M2optPoly.c  M2optPoly.h  M2optPolyII.c  M2optPolyII.h  MCPolygon.c  MCPolygon.h  Makefile.am  Makefile.in  MbouncePoly.c  MbouncePoly.h  MgrowingPoly.c  MgrowingPoly.h  MrejectPoly.c  MrejectPoly.h  MsearchPoly.c  MsearchPoly.h  MspPoly.c  MspPoly.h  MstarPoly.c  MstarPoly.h  MtriangPoly.c  MtriangPoly.h  MxmonoPoly.c  MxmonoPoly.h  analysis.c  analysis.h  analysisII.c  analysisII.h  argEval.c  argEval.h  basicAVL.c  basicAVL.h  basicDefs.h  basicDoubleArray.c  basicDoubleArray.h  basicGeom.c  basicGeom.h  basicHeap.c  basicHeap.h  (+118 more)
